fixed the spacing between control icons

--- a/components/input-select/src/input-select-control.module.scss
+++ b/components/input-select/src/input-select-control.module.scss
@@ -8,7 +8,6 @@
 }
 
 .buttons {
-  right: 13px;
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
@@ -18,6 +17,10 @@
 .button {
   display: inline-block;
   cursor: pointer;
+
+  &:not(:first-child) {
+    padding-right: size('1x');
+  }
 }
 
 .input.error,
